kong_gateway/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: jenkins
  annotations:
    konghq.com/strip-path: "false"
spec:
  parentRefs:
  - name: kong
    namespace: kong
  hostnames:
    - "devops.practice.jenkins.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jenkins-controller-service
      kind: Service
      port: 8080
      namespace: jenkins
  # - matches:
  #   - path:
  #       type: PathPrefix
  #       value: /login
  #   backendRefs:
  #   - name: jenkins-controller-service
  #     kind: Service
  #     port: 8080
  #     namespace: jenkins
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: echo
#   annotations:
#     konghq.com/strip-path: 'false'
# spec:
#   parentRefs:
#   - name: kong
#     namespace: kong
#     # port: 80
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - name: echo
#       kind: Service
#       port: 1027
